@@ -12,11 +12,23 @@ INHERITANCE
            is a Mail::Reporter
 
 SYNOPSIS
+         # standalone
          use Mail::Box::IMAP4::SSL;
+ 
          my $folder = new Mail::Box::IMAP4::SSL(
              username => 'johndoe',
-             password => 'x_marks_the_spot',
+             password => 'wbuaqbr',
              server_name => 'imap.example.com',
+         );
+ 
+         # with Mail::Box::Manager
+         use Mail::Box::Manager;
+ 
+         my $mbm = Mail::Box::Manager->new;
+         $mbm->registerType( imaps => 'Mail::Box::IMAP4::SSL' );
+ 
+         my $inbox = $mbm->open(
+             folder => 'imaps://johndoe:wbuaqbr@imap.example.com/INBOX',
          );
 
 DESCRIPTION
@@ -31,7 +43,7 @@ METHODS
   "Mail::Box::IMAP4::SSL->new( %options )"
          my $folder = new Mail::Box::IMAP4::SSL(
              username => 'johndoe',
-             password => 'x_marks_the_spot',
+             password => 'wbuaqbr',
              server_name => 'imap.example.com',
              %other_options
          );
